overflow issue

--- a/frontend/src/components/NewProjectScreen.module.css
+++ b/frontend/src/components/NewProjectScreen.module.css
@@ -31,6 +31,8 @@
     right: 1vw;
     cursor: pointer;
     font-size: 1vw;
+    border: none;
+    background-color: transparent;
 }
 
 .form {
