--- a/frontend/src/components/SummariesScreen.module.css
+++ b/frontend/src/components/SummariesScreen.module.css
@@ -13,6 +13,7 @@
     align-items: center;
     padding: 0 1vw;
     gap: 1vw;
+    height: 100%;
 }
 
 .topBar select {
@@ -38,13 +39,19 @@
 
 .bottomContent {
     display: grid;
-    grid-template-columns: 8fr 3fr;   
+    grid-template-columns: 8fr 3fr;  
+    height: 100%;
+    overflow: hidden;
 }
 
 .summaryText {
     border-right: 1px solid black;
     height: 100%;
-    overflow-y: auto;
+    min-height: 100%;
+    max-height: 100%;
+    overflow-y: auto; 
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .summaryArea {
@@ -54,8 +61,11 @@
     justify-content: flex-start;
     align-items: flex-start;
     padding: 1vw;
-    overflow-y: auto;
     font-size: 0.9vw;
+}
+
+pre {
+    text-wrap: wrap;
 }
 
 .ratingArea {
